--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ colorama==0.4.6
 deprecation==2.1.0
 email-validator==2.1.1
 Flask==2.3.3
+flask-cors==6.0.1
 gotrue==2.12.3
 gunicorn==21.2.0
 h11==0.16.0
